grub2 (2.00-4) UNRELEASED; urgency=low

  * Fix platform postinsts to handle new core.img location.
  * Only fix up powerpc key repeat on IEEE1275 machines.  Fixes powerpc-emu
    compilation.
  * Move grub-install to grub2-common, since it's now common across
    platforms but clashes with grub-legacy.

 -- Colin Watson <cjwatson@debian.org>  Fri, 14 Sep 2012 10:28:00 +0100

grub2 (2.00-3) experimental; urgency=low

  * Use dh-autoreconf.
  * Bail out if trying to run grub-mkconfig during upgrade to 2.00 (e.g.
    while configuring a kernel image), since the old /etc/grub.d/00_header
    conffile breaks until such time as grub-common is configured.

 -- Colin Watson <cjwatson@debian.org>  Thu, 13 Sep 2012 17:07:18 +0100

grub2 (2.00-2) experimental; urgency=low

  * Add -Wno-error=unused-result to HOST_CFLAGS for the moment, since at
    least grub-core/lib/crypto.c fails to compile on Ubuntu otherwise.
  * Update default/grub.md5sum to include Ubuntu maverick's default md5sum.
  * Autogenerate packaging files for grub-emu, in order that its postinst
    does not contain unexpanded @PACKAGE@ symbols.
  * Only try to install efiemu*.o into grub-emu on *-i386.

 -- Colin Watson <cjwatson@debian.org>  Sat, 08 Sep 2012 10:32:33 +0100

grub2 (2.00-1) experimental; urgency=low

  [ Jordi Mallach, Colin Watson ]
  * New upstream release.
    - Add LUKS and GELI encrypted disk support (closes: #463107).
    - Lazy scanning to avoid accessing devices which aren't really used.
      This avoids boot delay due to slow device scanning (closes: #549905,
      #550015, #550083, #564252, #595059, #632408).
    - Don't override more informative errors when loading kernel/initrd
      (closes: #551630).
    - Support 4K-sector NTFS (closes: #567728).
    - Unify grub-mkrescue interface on powerpc with that on other
      architectures (closes: #570119).
    - Fix infinite recursion in gettext when translation fails (closes: