@@ -17,6 +17,7 @@ usr/bin/grub-mkstandalone
 usr/bin/grub-script-check
 usr/sbin/grub-mkconfig
 usr/sbin/grub-mkdevicemap
+usr/sbin/grub-mknetdir
 usr/sbin/grub-probe
 usr/share/grub/*.h
 usr/share/grub/*.pf2
@@ -35,4 +36,5 @@ usr/share/man/man1/grub-mkstandalone.1
 usr/share/man/man1/grub-script-check.1
 usr/share/man/man8/grub-mkconfig.8
 usr/share/man/man8/grub-mkdevicemap.8
+usr/share/man/man8/grub-mknetdir.8
 usr/share/man/man8/grub-probe.8
