@@ -2,5 +2,3 @@
 ../../debian/script			usr/share/bug/@PACKAGE@
 ../../debian/kernel/zz-update-grub	etc/kernel/postinst.d
 ../../debian/kernel/zz-update-grub	etc/kernel/postrm.d
-
-usr/share/man/man8/grub-mknetdir.8
