@@ -1,1 +1,0 @@
-usr/lib/grub/@CPU_PLATFORM@/grub-mknetdir	usr/sbin/grub-mknetdir
